--- a/css/selectoperator.css
+++ b/css/selectoperator.css
@@ -384,21 +384,25 @@ h1 {
     margin-top: 15px; }
     .network_circles_list li {
       border-top: solid 1px #e5e5e5;
-      padding: 15px 0px; }
+      position: relative; }
       .network_circles_list li:hover {
         background-color: #f7f7f7; }
       .network_circles_list li:after {
+        position: absolute;
+        right: 5px;
+        top: 15px;
         content: "\203A";
         font-size: 17px;
         cursor: pointer;
         color: #f07322;
-        float: right;
         margin: auto 10px auto 0px; }
       .network_circles_list li a {
         font-family: "gotham-thin";
         font-size: 20px;
         color: #2e2e2e;
-        padding-left: 5px; }
+        padding-left: 5px;
+        display: block;
+        padding: 15px 0px; }
 
   .selected_operator img {
     height: 40px;
@@ -416,7 +420,7 @@ h1 {
   .selected_operator .plans-operator-name {
     font-family: "gotham-thin";
     font-size: 18px;
-    color: #2E2E2E;
+    color: #2e2e2e;
     letter-spacing: 0.11px;
     line-height: 44px; } }
 
