--- a/scss/selectoperator.scss
+++ b/scss/selectoperator.scss
@@ -51,21 +51,22 @@
         padding: 0px;
         margin-top: 10px;
         li {
-          width: 27vw;
-          height: 27vw;
-          padding: 8px;
-          margin: 1.3vw 0.5vw;
-          display: inline-block;
-          vertical-align: top;
-          border-radius: 6px;
-          position: relative;
+            width: 27vw;
+            height: 27vw;
+            padding: 8px;
+            margin: 1.3vw 0.5vw;
+            display: inline-block;
+            vertical-align: top;
+            border-radius: 6px;
+            position: relative;
 
             img {
                 width: auto;
                 height: 44%;
                 display: block;
                 max-width: 72%;
-                margin-bottom: 5px;            }
+                margin-bottom: 5px;
+            }
             span {
                 position: absolute;
                 bottom: 5px;
@@ -127,30 +128,34 @@
             background-color: #ef3829;
         }
     }
-    .network_circles_list{
-      list-style: none;
-      padding: 0px;
-      margin-top: 15px;
-        li{
+    .network_circles_list {
+        list-style: none;
+        padding: 0px;
+        margin-top: 15px;
+        li {
             border-top: solid 1px #e5e5e5;
-            padding: 15px 0px;
-            &:hover{
-              background-color: #f7f7f7;
+            position: relative;
+            &:hover {
+                background-color: #f7f7f7;
             }
             &:after {
-              content: "\203A";
-              font-size: 17px;
-              cursor: pointer;
-              color: #f07322;
-              float: right;
-              margin: auto 10px auto 0px;
+                position: absolute;
+                right: 5px;
+                top: 15px;
+                content: "\203A";
+                font-size: 17px;
+                cursor: pointer;
+                color: #f07322;
+                margin: auto 10px auto 0px;
             }
-          a{
-              font-family: $thin-font;
-              font-size: 20px;
-              color: $billdesk-primary-black;
-              padding-left: 5px;
-          }
+            a {
+                font-family: $thin-font;
+                font-size: 20px;
+                color: $billdesk-primary-black;
+                padding-left: 5px;
+                display: block;
+                padding: 15px 0px;
+            }
         }
     }
     .selected_operator {
@@ -169,12 +174,12 @@
             font-size: 25px;
             color: #b3b3b3;
         }
-        .plans-operator-name{
-        font-family: "gotham-thin";
-        font-size: 18px;
-        color: #2E2E2E;
-        letter-spacing: 0.11px;
-        line-height: 44px;
+        .plans-operator-name {
+            font-family: "gotham-thin";
+            font-size: 18px;
+            color: #2e2e2e;
+            letter-spacing: 0.11px;
+            line-height: 44px;
         }
     }
 }
