--- a/css/otp.css
+++ b/css/otp.css
@@ -95,7 +95,8 @@ h1 {
   height: 46px;
   padding: 7px;
   font-size: 21px;
-  color: white; }
+  color: white;
+  background-color: #d8d8d8; }
   .button:focus {
     outline: none;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
