--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -128,6 +128,7 @@ h1 {
     padding: 7px;
     font-size: 21px;
     color: white;
+    background-color: #d8d8d8;
 
     &:focus {
         outline: none;
