--- a/css/selectpaymentmethod.css
+++ b/css/selectpaymentmethod.css
@@ -345,29 +345,25 @@ a[x-apple-data-detectors] {
     .payment_gatemways li {
       padding: 20px 0px 20px 0px;
       position: relative;
-      border-top: 1px solid #eaeaea;
-      height: 80px; }
+      height: 80px;
+      border: 1px solid #e8e8e8;
+      background-color: #f7f7f7;
+      border-radius: 4px;
+      margin-bottom: 10px; }
       .payment_gatemways li a {
         display: block; }
       .payment_gatemways li:hover {
         background-color: #f7f7f7; }
-      .payment_gatemways li:after {
-        position: absolute;
-        right: 24px;
-        top: 20px;
-        content: "\203A";
-        display: inline-block;
-        font-size: 22px;
-        cursor: pointer;
-        color: #f07322; }
       .payment_gatemways li:last-child {
         border-bottom: 1px solid #eaeaea; }
     .payment_gatemways img {
-      width: auto; }
+      width: auto;
+      margin: auto;
+      display: block; }
     .payment_gatemways #tez {
       height: 38px; }
     .payment_gatemways #upi {
-      height: 18px;
-      margin: 9px 0px 0px 6px; } }
+      height: 20px;
+      margin-top: 9px; } }
 
 /*# sourceMappingURL=selectpaymentmethod.css.map */
