--- a/scss/selectpaymentmethod.scss
+++ b/scss/selectpaymentmethod.scss
@@ -17,30 +17,35 @@
         li {
             padding: 20px 0px 20px 0px;
             position: relative;
-            border-top: 1px solid #eaeaea;
             height: 80px;
+            border: 1px solid #e8e8e8;
+            background-color: #f7f7f7;
+            border-radius: 4px;
+            margin-bottom: 10px;
             a {
                 display: block;
             }
             &:hover{
               background-color: #f7f7f7;
             }
-            &:after {
-                position: absolute;
-                right: 24px;
-                top: 20px;
-                content: "\203A";
-                display: inline-block;
-                font-size: 22px;
-                cursor: pointer;
-                color: #f07322;
-            }
+            // &:after {
+            //     position: absolute;
+            //     right: 24px;
+            //     top: 20px;
+            //     content: "\203A";
+            //     display: inline-block;
+            //     font-size: 22px;
+            //     cursor: pointer;
+            //     color: #f07322;
+            // }
             &:last-child {
                 border-bottom: 1px solid #eaeaea;
             }
         }
         img {
             width: auto;
+            margin: auto;
+            display: block;
         }
 
         #tez {
@@ -48,8 +53,8 @@
         }
 
         #upi {
-            height: 18px;
-            margin: 9px 0px 0px 6px;
+            height: 20px;
+            margin-top: 9px;
         }
     }
 }
